<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="title_activity_authentication">Login/Signup</string>
    <string name="title_activity_display_message">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot_password"><u><b>Forgot password?</b></u></string>
    <string name="create_login"><u><b>Don\'t have an account?</b></u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="logIn"><u><b>Log In</b></u></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_message">No message received</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Please enter your email:</string>
    <string name="signing_up">Signing up...</string>
    <string name="signup_succeeded_before_email">Sign up succeeded.\n\nPlease confirm your email by clicking the link in the message we just sent to </string>
    <string name="signup_succeeded_after_email">.</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="logging_in">Logging in...</string>
    <string name="email_password_invalid">Email/password invalid</string>
    <string name="loading">Loading...</string>
    <string name="reset_password_success_instructions">An email was sent with instructions on how to reset your password.</string>
    <string name="email_invalid">Email invalid.</string>

</resources>
