<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AuthenticationFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingBottom="@dimen/vertical_margin"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="25"
        android:src="@drawable/ic_auth_wordmark"/>

    <EditText android:id="@+id/name_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:visibility="gone"/>

    <EditText android:id="@+id/email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText android:id="@+id/password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <Button android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="visible"/>

    <Button android:id="@+id/signup_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:visibility="gone"/>

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"/>

    <TextView android:id="@+id/forgotPassword_Text"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:clickable="true"
        android:visibility="visible"/>

    <LinearLayout android:id="@+id/logInText_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <TextView android:id="@+id/haveAnAccount_Text"
            android:text="@string/have_an_account"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0"/>

        <View
            android:layout_height="match_parent"
            android:layout_width="5dp"/>

        <TextView android:id="@+id/logIn_Text"
            android:text="@string/logIn"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:clickable="true"/>

    </LinearLayout>

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <TextView android:id="@+id/createLogin_Text"
        android:text="@string/create_login"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:clickable="true"
        android:visibility="visible"/>

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

</LinearLayout>
